c++11 support: alias-declaration is not handled just like a typedef in the duchain

it's still missing support for template-aliases though

BUG: 294536