languages/cpp/parser/default_visitor.h
@@ -114,6 +114,7 @@ protected:
   virtual void visitLambdaExpression(LambdaExpressionAST* );
   virtual void visitLambdaCapture(LambdaCaptureAST* );
   virtual void visitLambdaDeclarator(LambdaDeclaratorAST* );
+  virtual void visitAliasDeclaration(AliasDeclarationAST* );
 
 private:
   typedef void (Visitor::*visitor_fun_ptr)(AST *);
